# snowflake-native-splunk-app

./: .gitignore  .gitlint  pyproject.toml  snowflake.yml
_bmad-output/implementation-artifacts/: 1-1-native-app-manifest-and-idempotent-setup.md  1-2-config-and-state-tables.md  1-3-streamlit-shell-and-navigation.md  2-1-otlp-endpoint-and-connection-test.md  2-2-optional-certificate-and-validation.md  2-3-persist-destination-config-and-getting-started-hub.md  3-1-source-discovery-and-pack-toggles.md  3-2-per-source-selection-and-intervals.md  3-3-save-source-configuration.md  4-1-secure-otlp-export-foundation.md  4-2-splunk-compatible-telemetry-contract.md  epic-1-retro-2026-03-17.md  epic-2-retro-2026-03-26.md  epic-3-retro-2026-04-02.md  sprint-status.yaml
_bmad-output/planning-artifacts/: Native_App_Approval_Process_Guide.md  architecture.md  epics.md  event_table_entity_discrimination_strategy.md  event_table_streams_governance_research.md  grpc_research.md  implementation-readiness-report-2026-03-16.md  implementation-readiness-report-2026-03-31.md  native_app_warehouse_assignment_guide.md  otel_semantic_conventions_snowflake_research.md  prd-validation-report.md  prd.md  product-brief-snowflake-native-splunk-app-2026-02-15.md  product-brief.md  python_stored_procedure_best_practices_snowflake_native_app.md  snowflake-event-tables-design.md  snowflake_data_governance_privacy_features.md  splunk_snowflake_native_app_vision.md  st-fragment-design.md  streamlit_component_compatibility_snowflake.csv  telemetry_preparation_for_export.md  telemetry_sources.md  ux-design-directions.html  ux-design-specification.md
app/: README.md  about_dialog_native_preview.py  discover_button_preview.py  environment.yml  manifest.yml  pyproject.toml  setup.sql
app/python/: cert_validate.py  connection_test.py  endpoint_parse.py  log_mapper.py  metric_mapper.py  otlp_export.py  otlp_export_smoke_test.py  provision_egress.py  secret_reader.py  span_mapper.py  telemetry_constants.py  telemetry_test_generators.py
app/streamlit/: main.py
app/streamlit/pages/: data_governance.py  getting_started.py  observability_health.py  splunk_settings.py  telemetry_sources.py
app/streamlit/utils/: config.py  onboarding.py  snowflake.py  source_discovery.py
grpc_test/: grpc_connectivity_testing_nites.md  local_otlp_runtime_smoke_test.py  otlp_export_concurrency_race_harness.py  otlp_grpc_probe.py  pem_validator.py
grpc_test/tls-setup/: .gitignore  README.md  agent_config_tls.yaml  ca.crt  generate-certs.sh  server.cnf  server.crt  wrong_ca.crt
scripts/: dev_reset_onboarding.sql  shared_content.sql
tests/: test_cert_validate.py  test_config.py  test_connection_test.py  test_endpoint_parse.py  test_getting_started.py  test_log_mapper.py  test_metric_mapper.py  test_otlp_export.py  test_otlp_export_smoke_test.py  test_provision_egress.py  test_source_discovery.py  test_span_mapper.py  test_telemetry_sources_page.py
tests/integration/: __init__.py  conftest.py  test_mapper_real_data.py
